--- a/public/css/app.css
+++ b/public/css/app.css
@@ -595,6 +595,39 @@ select {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.container {
+  width: 100%;
+}
+@media (min-width: 640px) {
+
+  .container {
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px) {
+
+  .container {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px) {
+
+  .container {
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px) {
+
+  .container {
+    max-width: 1280px;
+  }
+}
+@media (min-width: 1536px) {
+
+  .container {
+    max-width: 1536px;
+  }
+}
 .prose {
   color: var(--tw-prose-body);
   max-width: 65ch;
@@ -996,6 +1029,10 @@ select {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -1065,6 +1102,12 @@ select {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -1074,20 +1117,23 @@ select {
 .mt-0 {
   margin-top: 0px;
 }
-.mb-8 {
-  margin-bottom: 2rem;
-}
 .mr-4 {
   margin-right: 1rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .ml-8 {
   margin-left: 2rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+.-mt-10 {
+  margin-top: -2.5rem;
 }
 .mr-5 {
   margin-right: 1.25rem;
@@ -1095,20 +1141,11 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mr-6 {
-  margin-right: 1.5rem;
-}
 .ml-5 {
   margin-left: 1.25rem;
 }
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-.-mt-10 {
-  margin-top: -2.5rem;
 }
 .block {
   display: block;
@@ -1209,6 +1246,9 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-1\/3 {
+  width: 33.333333%;
+}
 .w-1\/2 {
   width: 50%;
 }
@@ -1221,22 +1261,25 @@ select {
 .w-3\/6 {
   width: 50%;
 }
-.w-2\/6 {
-  width: 33.333333%;
-}
-.w-1\/6 {
-  width: 16.666667%;
-}
 .w-44 {
   width: 11rem;
 }
 .w-14 {
   width: 3.5rem;
 }
+.w-2\/6 {
+  width: 33.333333%;
+}
+.w-1\/6 {
+  width: 16.666667%;
+}
 .w-11 {
   width: 2.75rem;
 }
-.w-1\/3 {
+.w-4\/6 {
+  width: 66.666667%;
+}
+.w-4\/12 {
   width: 33.333333%;
 }
 .w-1\/4 {
@@ -1249,9 +1292,6 @@ select {
 }
 .w-1 {
   width: 0.25rem;
-}
-.w-4\/6 {
-  width: 66.666667%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1580,6 +1620,18 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
@@ -1592,24 +1644,19 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
 .bg-green-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
-.bg-green-500 {
+.bg-green-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
+}
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 .bg-cover {
   background-size: cover;
@@ -1635,6 +1682,9 @@ select {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-20 {
+  padding: 5rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1730,14 +1780,17 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
 .pl-8 {
   padding-left: 2rem;
 }
 .pb-12 {
   padding-bottom: 3rem;
-}
-.pb-10 {
-  padding-bottom: 2.5rem;
 }
 .pr-16 {
   padding-right: 4rem;
@@ -1745,17 +1798,14 @@ select {
 .pl-3\.25 {
   padding-left: 3.25rem;
 }
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
 .pl-37\.33 {
   padding-left: 37.33rem;
 }
-.pt-8 {
-  padding-top: 2rem;
-}
 .pb-8 {
   padding-bottom: 2rem;
+}
+.pt-8 {
+  padding-top: 2rem;
 }
 .pl-88 {
   padding-left: 22rem;
@@ -2059,6 +2109,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
 .hover\:bg-green-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
@@ -2067,10 +2121,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-}
 .hover\:bg-green-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
@@ -2078,6 +2128,10 @@ select {
 .hover\:bg-sky-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 .hover\:text-2xl:hover {
   font-size: 1.5rem;
